/////////////////// Interface definition   ////////////////////

syntax = "proto3";

// Package
package config_visual_control_systems;


// service definition
service ConfigureVisualRecognitionSystems {

    rpc ConfigureVisualRecognitionSystems (ConfigRequest) returns ( ConfigResponse) {};    // response will include the payload in {}

}

// Numbers to be added
message ConfigRequest{
   int32 numOfScans = 1;
   int32 scanLenghtInSeconds = 2;
}

// Response 
message ConfigResponse{
     string message = 1;
}
